Initial commit of Literate Data Structures.

--- a/src/libds.tex
+++ b/src/libds.tex
@@ -3,12 +3,12 @@
 \usepackage{noweb}
 \pagestyle{noweb}
 \noweboptions{}
-\title{CMake NoWeb}
+\title{Literate Data Structures Library}
 \author{Brandon Koepke}
 
 \begin{document}
 \maketitle
 \tableofcontents
-\abstract{Simple Literate Programming example.}
+\abstract{Collection of Data Structures implemented in Literate C.}
 \input{main}
 \end{document}
